fixed alignment issues

--- a/home/static/problemstatements/probst.css
+++ b/home/static/problemstatements/probst.css
@@ -134,7 +134,7 @@ h3 {
     display : flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 @media screen and (max-width:1039px){
     .bodycontent{
